--- a/frontend/src/app/components/TechSlider/TechSlider.module.scss
+++ b/frontend/src/app/components/TechSlider/TechSlider.module.scss
@@ -4,17 +4,10 @@
 
 .techSlider {
 	& div {
-		gap: rem(40) !important;
-		@media (min-width: rem(768)) {
-			gap: rem(80) !important;
-		}
-		@media (min-width: rem(992)) {
-			gap: rem(120) !important;
-		}
 		img {
 			object-fit: contain;
-			width: auto;
-			height: auto;
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
